# Kivra

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: pull_request_template.md
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/native/: Cargo.toml  tauri.conf.json
apps/desktop/native/capabilities/: default.json
apps/desktop/native/src/: lib.rs  main.rs
apps/desktop/renderer/core/i18n/: i18n.ts
apps/desktop/renderer/core/router/: router.tsx
apps/desktop/renderer/core/supabase/: sync-service.ts
apps/desktop/renderer/core/tauri/: tauri-client.ts
apps/desktop/renderer/features/auth/: index.ts
apps/desktop/renderer/features/docs/: index.ts
apps/desktop/renderer/features/project/: index.ts
apps/desktop/renderer/routes/: index.tsx
apps/desktop/renderer/styles/: globals.css
apps/desktop/ui/: main.tsx
apps/desktop/ui/routes/: index.tsx
apps/desktop/ui/styles/: globals.css
docs/: architecture.md  convention.md  design-system.md  landing-page.md  licensing.md  master-convention.md  prd.md  wireframe.md
plugins/jetbrains/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
plugins/vscode/: README.md  package.json  tsconfig.json
plugins/vscode/src/: captured-run-writer.ts  dap.ts  extension.ts  paths.ts  project-matcher.ts  protocol.ts  sanitizer.ts
plugins/vscode/test/: core.test.mjs
tools/: install-shell-capture.mjs  kivra-shell-stream.mjs  trace-diagnose.mjs  validate-protocol-fixtures.mjs
(+96 files in other folders)
