[package]
name = "kivra"
version = "0.1.0"
description = "Desktop-first developer memory platform"
authors = ["Kivra"]
edition = "2021"

[lib]
name = "kivra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
thiserror = "1"
